broke Zsolt's spririt again

--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
   <body>
    <canvas id='main-canvas' width="600" height="500"></canvas>
    <input type="color" id="input-colour">
+<!--    <button id='ten-button'>Ten Pixels</button>
+   <button id='twenty-button'>Ten Pixels</button>
+   <button id='fifty-button'>Fifty Pixels</button> -->
+
+   <select>
+     <option selected disabled>Choose a brush size</option>
+     <option value="10">10</option>
+     <option value="20">20</option>
+     <option value="50">50</option>
+   </select>
   </body>
 </html>
